# AQI_COL

./: README.md  pyproject.toml  requirement.txt
Air-Quality-Prediction/airprediction/: Extract_combine.py  Plot_AQI.py  db.sqlite3  manage.py  model.py  requirement_main.txt  scrape.py
Air-Quality-Prediction/airprediction/Data/AQI/: aqi2018.csv  aqi2019.csv  aqi2020.csv  aqi2021.csv
Air-Quality-Prediction/airprediction/Data/Html_Data/2018/: 1.html  10.html  11.html  12.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html
Air-Quality-Prediction/airprediction/Data/Html_Data/2019/: 1.html  10.html  11.html  12.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html
Air-Quality-Prediction/airprediction/Data/Html_Data/2020/: 1.html  10.html  11.html  12.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html
Air-Quality-Prediction/airprediction/Data/Html_Data/2021/: 1.html  10.html  11.html  12.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  (+1 more)
Air-Quality-Prediction/airprediction/Data/Real-Data/: Real_Combine.csv  real_2018.csv  real_2019.csv  real_2020.csv  real_2021.csv
Air-Quality-Prediction/airprediction/Machine Learning Models/: Regression_Linear.ipynb  Regression_Random_Forest.ipynb  Regression_Ridge_Lasso.ipynb  Regression_Xgboost.ipynb
Air-Quality-Prediction/airprediction/airprediction/: settings.py  urls.py  wsgi.py
Air-Quality-Prediction/airprediction/main/: admin.py  models.py  regression_random_forest.pkl  urls.py  views.py
Air-Quality-Prediction/airprediction/main/migrations/: 0001_initial.py
(+10 files in other folders)
