[tool.poetry]
name = "aqi"
version = "0.1.0"
description = ""
authors = ["bibekgupta3333 <bibekgupta3333@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.9"
pandas = "1.4.3"
requests = "^2.28.0"
matplotlib = "^3.5.2"
beautifulsoup4 = "^4.11.1"
seaborn = "^0.12.0"
scikit-learn = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
